--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,25 @@
+@import url('https://fonts.googleapis.com/css?family=Dancing+Script|Noto+Sans|Roboto+Slab');
+
 .red {
   color: darkred;
   font-style: italic;
 }
 
-.green {
-  color: darkgreen;
+.highlights {
+  color: rgb(7, 63, 7);
   font-weight: bold; 
+  font-family: 'Noto Sans', 'Roboto Slab', serif;
 }
 
-.result {
-  font-family: 'Germania One', cursive;
-  color: navy;
+.data {
+  font-family: Arial, Helvetica, Verdana;
+  color: rgb(60, 8, 102);
   font-size: 18px;
 }
 
-.unknown {
+.text {
   color: darkblue;
-  text-decoration: underline;
+  font-display: Georgia, Times;
 }
 
 .lined {
@@ -32,8 +35,12 @@ body {
   background-color: aliceblue;
 }
 
-h1, h2 {
+h1 {
   font-family: 'Germania One', cursive;
+}
+
+h2 {
+  font-family: 'Dancing Script', cursive;
 }
 
 h3 {
