--- a/css/style.css
+++ b/css/style.css
@@ -46,17 +46,27 @@ h2 {
 h3 {
   font-style: italic;
 }
+button {
+  margin: 15px 40%;
+  width: 250px;
+  border-radius: 5px;
+  padding: 10px;
+  background-color: greenyellow;
+  float: right;
+  font-weight: 700;
+}
 
 input {
   padding: 5px;
   width: 190px;
+  font-size: 16px;
 }
 
 label {
   margin: 5px;
 }
 
-ul, h3, div, ol, p, fieldset {
+ul, h3, div, ol, p, fieldset, button {
   font-family: 'PT Sans', sans-serif;
   font-size: 16px;
   color: rgb(17, 4, 34);
