--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Dancing+Script|Noto+Sans|Roboto+Slab');
 
+#frosted {
+  width: 150px;
+}
 .red {
   color: darkred;
   font-style: italic;
@@ -9,6 +12,10 @@
   color: rgb(7, 63, 7);
   font-weight: bold; 
   font-family: 'Noto Sans', 'Roboto Slab', serif;
+}
+
+.contact {
+  margin: 0; 
 }
 
 .data {
@@ -41,6 +48,12 @@ body {
   display: block;
   margin: 85px auto 0 auto;
   background-color: aliceblue;
+  background-image: url("../images/salmon.png");
+  background-repeat: no-repeat;
+  background-position: 900px 450px;
+  background-attachment: fixed;
+  background-size: 300px;
+  /*background-blend-mode: luminosity;*/
 }
 
 fieldset {
@@ -104,19 +117,31 @@ nav {
 }
 
 nav img {
-  width: 25%;
+  width: 20%;
+  border-radius: 5px;
 }
 
 li {
   list-style-type: none;
+  margin: 0 40%;
 }
 
 section {
   margin: 0 200px;
 }
 
-.contact {
-  margin: 0; 
+aside {
+  text-align: center;
+}
+
+article div {
+  text-align: center;
+  margin: 5px 15px;
+}
+
+article div img {
+  border-radius: 15px;
+  margin: 5px 20px;
 }
 
 footer {
